# Melee

./: .drone.yml  CMakeLists.txt  Readme.md
Assets/Audio/: Attribution.txt
Melee/: AsteroidGenerator.cpp  AsteroidGenerator.hpp  CMakeLists.txt  Main.cpp  Melee.cpp
Melee/Assets/Music/: Attribution.txt
Melee/Assets/SoundEffects/: Attribution.txt
Melee/Assets/SpritePacker/: CMakeLists.txt  SpritePacker.cpp
Melee/Audio/: CMakeLists.txt
Melee/Audio/SFML/: CMakeLists.txt  SFMLAudio.cpp  SFMLAudio.hpp  SFMLAudioAssetLoader.cpp  SFMLAudioAssetLoader.hpp
Melee/Engine/: AsteroidEntity.cpp  AsteroidEntity.hpp  CMakeLists.txt  Engine.cpp  Engine.hpp  EngineTypes.hpp  Entity.cpp  Entity.hpp  ExhaustEntity.cpp  ExhaustEntity.hpp  Periodic.hpp  PlanetEntity.cpp  PlanetEntity.hpp  PlayerEntity.cpp  PlayerEntity.hpp
Melee/Engine/Entities/: AsteroidEntity.cpp  AsteroidEntity.hpp  ExhaustEntity.cpp  ExhaustEntity.hpp  ExplosionEntity.cpp  ExplosionEntity.hpp  PlanetEntity.cpp  PlanetEntity.hpp  PlayerEntity.cpp  PlayerEntity.hpp  ProjectileEntity.cpp  ProjectileEntity.hpp  ShipEntity.cpp  ShipEntity.hpp  WeaponEntity.cpp  WeaponEntity.hpp
Melee/Engine/Entities/Races/: Androsynth.cpp  Androsynth.hpp  Arilou.cpp  Arilou.hpp  Human.cpp  Human.hpp  HumanShipEntity.cpp  HumanShipEntity.hpp  Race1ShipEntity.cpp  Race1ShipEntity.hpp  Race2ShipEntity.cpp  Race2ShipEntity.hpp
Melee/Engine/Generators/: AsteroidGenerator.cpp  AsteroidGenerator.hpp  EntityGenerator.cpp  EntityGenerator.hpp  PlanetGenerator.cpp  PlanetGenerator.hpp
Melee/Engine/Util/: EngineUtils.hpp  MatrixMath.hpp  Periodic.hpp  VectorMath.hpp
Melee/Renderer/: CMakeLists.txt
Melee/Renderer/SDL/: SDLEntityRenderer.cpp  SDLEntityRenderer.hpp  SDLRenderer.cpp  SDLRenderer.hpp
Melee/Renderer/SFML/: CMakeLists.txt  SFMLAssetLoader.cpp  SFMLAssetLoader.hpp  SFMLAsteroidEntityRenderer.cpp  SFMLAsteroidEntityRenderer.hpp  SFMLEntityRenderer.cpp  SFMLEntityRenderer.hpp  SFMLExhaustEntityRenderer.cpp  SFMLExhaustEntityRenderer.hpp  SFMLPlanetEntityRenderer.cpp  SFMLPlanetEntityRenderer.hpp  SFMLPlayerEntityRenderer.cpp  SFMLPlayerEntityRenderer.hpp  SFMLRenderable.hpp  SFMLRenderer.cpp  SFMLRenderer.hpp  SFMLUtils.hpp
Melee/Renderer/SFML/Entities/: SFMLAsteroidEntityRenderer.cpp  SFMLAsteroidEntityRenderer.hpp  SFMLExhaustEntityRenderer.cpp  SFMLExhaustEntityRenderer.hpp  SFMLExplosionEntityRenderer.cpp  SFMLExplosionEntityRenderer.hpp  SFMLPlanetEntityRenderer.cpp  SFMLPlanetEntityRenderer.hpp  SFMLPlayerEntityRenderer.cpp  SFMLPlayerEntityRenderer.hpp  SFMLProjectileEntityRenderer.cpp  SFMLProjectileEntityRenderer.hpp  SFMLShipEntityRenderer.cpp  SFMLShipEntityRenderer.hpp  SFMLWeaponEntityRenderer.cpp  SFMLWeaponEntityRenderer.hpp
Melee/Renderer/SFML/UI/: SFMLPlayerHudTileRenderer.cpp  SFMLPlayerHudTileRenderer.hpp  SFMLShipHudTileRenderer.cpp  SFMLShipHudTileRenderer.hpp
Melee/SpritePacker/: CMakeLists.txt  SpritePacker.cpp
linux/: .ninja_deps  .ninja_log  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  build.ninja  cmake_install.cmake  rules.ninja
linux/Melee/: Melee  cmake_install.cmake
linux/Melee/Audio/: cmake_install.cmake
linux/Melee/Audio/SFML/: cmake_install.cmake
linux/Melee/Engine/: cmake_install.cmake
linux/Melee/Renderer/: cmake_install.cmake
linux/Melee/Renderer/SFML/: cmake_install.cmake
linux/Melee/SpritePacker/: SpritePacker  cmake_install.cmake
